/*
 * $Id: ChangeLog,v 1.2636 2004/03/23 19:56:27 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2004-03-24 05:30 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
   * source/rtl/hbxml.c
     ! type cast

   * contrib/libnf/color2n.c
     ! replace NULL to 0.

2004-03-23 12:06 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/filesys.c
    ! Fixed compilation under #if defined(HB_FS_FILE_IO)

  * source/rtl/win32ole.prg
    ! Fixed support of VT_BOOL to utilize VARIANT_TRUE and VARIANT_FALSE

2004-03-23 19:23 UTC+0100 Giancarlo Niccolai <gc [at] niccolai [dot] ws>
  * include/hbxml.h
  * source/rtl/hbxml.c
    ! fixed error reporting
    + Added node causing error recording
    ! Using self growing strings to record infinite length node and attribute names and
      attribute values.

  * source/rtl/txml.prg
    + Added node causing error recording.

  * tests/xmltest.prg
    + Added node causing the error in error reporting test.

2004-03-23 23:00 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/source/rtl/tbrowse.prg
    * Assign methods revisited. Now all assign methods are returning their correct values.
      Thanks Luis Krause Mantilla.

2004-03-23 19:45 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
   * source/rtl/console.c
     ! type cast

   * source/rtl/filesys.c
     ! fix non-compilation under MSVC when X__WIN32__ is defined.

   * source/rtl/direct.c
   * source/rtl/strmatch.c
   * source/rtl/gtcgi/gtcgi.c
     ! kill signed/unsigned mismatch warnings

2004-03-23 09:15 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * include/simplex.c
    ! add dummy return value in function SimpLex_GetNextToken()

  * include/hbrdddbf.h
  * source/rdd/dbf1.c
    ! fix inconsistent linkage for hb_dbfExists() to be in accordance with
      that declared in source/rdd/dbf1.c (It's a public function)
