@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2636 2004/03/23 19:56:27 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.2637 2004/03/23 22:16:46 andijahja Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,14 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-03-23 23:39 UTC+0100 Giancarlo Niccolai <gc [at] niccolai [dot] ws>
+  * source/rtl/filesys.c
+    ! Missing thread stubs in fsPopen();
+    
+  * source/rtl/hbxml.c
+    ! Fixed typecasts and some minor bugs. (really)
+    
 2004-03-24 05:30 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
    * source/rtl/hbxml.c
      ! type cast
